--- a/index.html
+++ b/index.html
@@ -21,16 +21,26 @@
 <body>
   <div class="container">
     <div class="row">
-      <!-- This is where the target number will display -->
-        <div class="col-sm-6"><h1>Number to Guess: <span id="targetNum"></span></h1></div> 
-      <div class="col-sm-6">six</div>
+      <!-- This is wher
+        e the target number will display -->
+        <div class="col-sm-6"><h1>Number to reach: <span id="targetNum"></span></h1></div> 
+      <div class="col-sm-6"><h1>Total Guessed: <span id="guesses"></span></h1></div>
     </div>
+
     <div class="row">
       <div class="col-md-8"><span id="pink"><img class="crystal-image" src="assets/images/pink.jpg"></span>
       <span id="yellow"><img class="crystal-image" src="assets/images/yellow.jpg"></span>
       <span id="green"><img class="crystal-image" src="assets/images/green.jpg"></span>
       <span id="purple"><img class="crystal-image" src="assets/images/purple.jpg"></span></div>
-      <div class="col-md-2">five</div>
+      <div class="col-md-2"></div> <hr>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class ="col-sm-3 box">Wins: <span id="wins"></span></div>
+      <div class ="col-sm-3 box">Losses: <span id="losses"></span></div>
+      <div class ="col-sm-3"></div>
+
     </div>
   </div>
   
